edited layout.tsx html element by adding className= w-full overflow-x-hidden to fix white bars on browser

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,17 +6,6 @@ body {
   /* font-family: Arial, Helvetica, sans-serif; */
  }
 
-/* added html background to fix the mobiel landscape view look to get rid of white bars */
-/* html, body {
-  @apply bg-zinc-800 text-white;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  overflow-x: hidden;
-} */
-
-
 @layer base {
   :root {
     --background: 0 0% 100%;
